test/cases/errors/cyclic-reexport-references/a.js
import { B } from "./cycle";

export const A = B;
